package com.greentree.engine.moon.render.shader;


public enum ShaderLanguage{
	
	GLSL(),;

}
